Fix spacing

--- a/app/assets/stylesheets/family_card.css.sass
+++ b/app/assets/stylesheets/family_card.css.sass
@@ -11,6 +11,7 @@
       .label
         display: inline-block
         height: 10px
+        margin-right: 3px
         width: 10px
       &:last-child
         margin-right: 0px
